// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`User Profile When there is a normal user should renders a book page 1`] = `
Array [
  <div
    className="nav-bg"
  >
    <div
      className="nav-bar container"
    >
      <div
        className="nav-group-logo"
      >
        <a
          aria-current="page"
          className="nav-link nav-title active"
          href="/"
          onClick={[Function]}
          style={Object {}}
        >
          Bookkers
        </a>
      </div>
      <div
        className="nav-group"
      >
        <a
          aria-current={null}
          className="nav-link"
          href="/session-profile"
          onClick={[Function]}
        >
          Profile
        </a>
        <a
          aria-current={null}
          className="nav-link"
          href="/books/new"
          onClick={[Function]}
        >
          Add book
        </a>
        <button
          className="nav-button"
          onClick={[Function]}
          type="button"
        >
          Log out
        </button>
      </div>
    </div>
  </div>,
  <div>
    <div
      className="box"
    >
      <div
        className="book-image-container"
      >
        <img
          alt=""
          className="book-image-detail"
          src="undefined"
        />
      </div>
      <div
        className="book-info-container"
      >
        <h2>
          Book: book
        </h2>
        <p>
          ISBN: 988718927312
        </p>
        <p>
          Editorial: responseLastName2
        </p>
        <p>
          Number of pages: response_test2@email.cl
        </p>
        <p>
          Author: responseDescription2
        </p>
        <p>
          genre: hola
        </p>
      </div>
    </div>
    <div />
    <p>
      
    </p>
  </div>,
]
`;

exports[`User Profile When there is an admin user should renders a book page with edit and delete buttons 1`] = `
Array [
  <div
    className="nav-bg"
  >
    <div
      className="nav-bar container"
    >
      <div
        className="nav-group-logo"
      >
        <a
          aria-current="page"
          className="nav-link nav-title active"
          href="/"
          onClick={[Function]}
          style={Object {}}
        >
          Bookkers
        </a>
      </div>
      <div
        className="nav-group"
      >
        <a
          aria-current={null}
          className="nav-link"
          href="/session-profile"
          onClick={[Function]}
        >
          Profile
        </a>
        <a
          aria-current={null}
          className="nav-link"
          href="/books/new"
          onClick={[Function]}
        >
          Add book
        </a>
        <button
          className="nav-button"
          onClick={[Function]}
          type="button"
        >
          Log out
        </button>
      </div>
    </div>
  </div>,
  <div>
    <div
      className="box"
    >
      <div
        className="book-image-container"
      >
        <img
          alt=""
          className="book-image-detail"
          src="undefined"
        />
      </div>
      <div
        className="book-info-container"
      >
        <h2>
          Book: book
        </h2>
        <p>
          ISBN: 988718927312
        </p>
        <p>
          Editorial: responseLastName2
        </p>
        <p>
          Number of pages: response_test2@email.cl
        </p>
        <p>
          Author: responseDescription2
        </p>
        <p>
          genre: hola
        </p>
        <div>
          <button
            className="delete"
            onClick={[Function]}
          >
            Delete
          </button>
        </div>
        <a
          href="/edit-book/2"
          onClick={[Function]}
        >
          <button
            className="edit"
            type="edit"
          >
            Edit
          </button>
        </a>
      </div>
    </div>
    <div />
    <p>
      
    </p>
  </div>,
]
`;
